--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 .packages
 .pub-cache/
 .pub/
+/build/
 
 # Web related
 lib/generated_plugin_registrant.dart
@@ -42,3 +43,4 @@ app.*.map.json
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
+/android/app/release
